# codex

./: .gitignore  MCP-CONVERSION.md  MCP-PROMPT.md  README.md  conversion-report1.md  prompt.md  review-diff-from-baseline.patch  rules.md  todo.md  verification-report.md
.github/workflows/: mcp-matrix.yml  rust-ci.yml
ci/: mcp-gates.md
codex-rs/: Cargo.toml  README.md  justfile
codex-rs/apply-patch/src/: parser.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/cli/tests/: precedence.rs
codex-rs/codex-mcp-legacy/: Cargo.toml
codex-rs/codex-mcp-legacy/src/: lib.rs
codex-rs/codex-mcp-sdk/: Cargo.toml
codex-rs/codex-mcp-sdk/src/: lib.rs  reexports.rs
codex-rs/codex-mcp-sdk/tests/: http_progress.rs
codex-rs/codex-mcp-types/: Cargo.toml
codex-rs/codex-mcp-types/src/: lib.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: elapsed.rs  lib.rs  mcp_impl_cli_arg.rs  model_presets.rs  sanitize.rs
codex-rs/core/: prompt.md
codex-rs/core/src/: auth.rs  client.rs  codex.rs  config.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  git_info.rs  lib.rs  mcp_connection_manager.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  project_doc.rs  safety.rs  seatbelt.rs  shell.rs  token_data.rs  turn_diff_tracker.rs
codex-rs/core/src/rollout/: policy.rs  recorder.rs  tests.rs
codex-rs/core/src/unified_exec/: mod.rs
codex-rs/core/tests/suite/: mod.rs  prompt_caching.rs
codex-rs/exec/src/: cli.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs
codex-rs/exec/tests/suite/: apply_patch.rs  common.rs
codex-rs/execpolicy/src/: execv_checker.rs  policy_parser.rs
codex-rs/login/src/: server.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-client/src/: lib.rs  mcp_client.rs  rmcp_wrapper.rs
codex-rs/mcp-client/tests/: http_smoke.rs  official_list.rs
codex-rs/mcp-server/: Cargo.toml  Cargo.toml.bak
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_runner.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  rmcp_handlers.rs
codex-rs/mcp-server/tests/: cancel_http.rs  progress_stdio.rs  sse_placeholder.rs  timeout_call.rs
codex-rs/mcp-server/tests/common/: README.md  mcp_process.rs  shell.rs
codex-rs/mcp-server/tests/suite/: codex_message_processor_flow.rs  codex_tool.rs  create_conversation.rs  mod.rs  parity.rs
codex-rs/protocol-ts/src/: lib.rs
codex-rs/protocol/src/: mcp_protocol.rs  models.rs  protocol.rs
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  diff_render.rs  history_cell.rs  lib.rs  slash_command.rs  status_indicator_widget.rs  user_approval_widget.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  command_popup.rs  mod.rs  paste_burst.rs  textarea.rs
codex-rs/tui/src/chatwidget/: agent.rs  tests.rs
docs/: MCP-CONVERSION.doc  advanced.md  config.md  faq.md  getting-started.md  install.md  mcp-callgraph.csv  mcp-design.md  mcp-inventory.csv  mcp-inventory.json  mcp-parity.csv  mcp-rollback-plan.md  mcp-security-mapping.md  mcp-test-plan.md
(+6 files in other folders)
