[package]
name = "codex-mcp-client"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
mcp-types = { path = "../mcp-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }

[features]
# Enables the new rmcp-based client implementation while keeping legacy as default.
rmcp_sdk = ["dep:rmcp"]

[dependencies.rmcp]
version = "=0.6.4"
optional = true
default-features = false
features = [
  "client",
  "server",                  # needed because rmcp's schema helpers reference handler::server
  "transport-child-process",
  "macros",
  "base64",
  "schemars",
]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
